--- a/GreedRulesEngine/GreedRulesEngine.csproj
+++ b/GreedRulesEngine/GreedRulesEngine.csproj
@@ -43,14 +43,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrap.cs" />
-    <Compile Include="DieFace.cs" />
-    <Compile Include="GreedGame.cs" />
-    <Compile Include="GreedGameResult.cs" />
-    <Compile Include="IDiceRoll.cs" />
+    <Compile Include="Core\DieFace.cs" />
+    <Compile Include="Core\GreedGame.cs" />
+    <Compile Include="Core\GreedGameResult.cs" />
+    <Compile Include="Core\GreedRuleEngine.cs" />
+    <Compile Include="Core\IDiceRoll.cs" />
     <Compile Include="Rules\IScoreRule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomDiceRoll.cs" />
+    <Compile Include="Core\RandomDiceRoll.cs" />
     <Compile Include="Rules\SingleRule.cs" />
     <Compile Include="Rules\TripleRule.cs" />
   </ItemGroup>
